trunk:

- Do not make connections persistent by default. This "feature" causes far more broken pipes than it is worth. Use with caution.

0.4.0:

- Various adjustments to connection handling to try to mitigate exceptions raised from deep within Net::HTTP.

- Don't coerce numbers that start with a zero because the zero will be lost. If a bucket, for example, has a name like '0815', all operation it will fail. Closes ticket #10089 [reported anonymously]"

- Add ability to connect through a proxy using the :proxy option when establishing a connection. Suggested by [Simon Horne <simon@soulware.co.uk>]

- Add :authenticated option to url_for. When passing false, don't generate signature parameters for query string.

- Make url_for accept custom port settings. [Rich Olson] 

0.3.0:

- Ensure content type is eventually set to account for changes made to Net::HTTP in Ruby version 1.8.5. Reported by [David Hanson, Stephen Caudill, Tom Mornini <tmornini@engineyard.com>]

- Add :persistent option to connections which keeps a persistent connection rather than creating a new one per request, defaulting to true. Based on a patch by [Metalhead <metalhead@metalhead.ws>]

- If we are retrying a request after rescuing one of the retry exceptions, rewind the body if its an IO stream so it starts at the beginning. [Jamis Buck]

- Ensure that all paths being submitted to S3 are valid utf8. If they are not, we remove the extended characters. Ample help from [Jamis Buck]

- Wrap logs in Log objects which exposes each line as a Log::Line that has accessors by name for each field.

- Various performance optimizations for the extensions code. [Roman LE NEGRATE <roman2k@free.fr>]

- Make S3Object.copy more efficient by streaming in both directions in parallel.

- Open up Net:HTTPGenericRequest to make the chunk size 1 megabyte, up from 1 kilobyte.

- Add S3Object.exists?

0.2.1:
